mxslc/tests/data/error/bad_main_function_1.mxsl
void your_function()
{
    surfaceshader surface = standard_surface();
    surface.base_color = color3(1.0, 0.0, 0.0);
}
